# Threatscope

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
agent/: __init__.py  config.py  event_bus.py
agent/collectors/: __init__.py  file_tailer.py
agent/parsers/: __init__.py  auth.py  base.py  syslog.py
api/: __init__.py  main.py
api/models/: __init__.py  database.py
api/routes/: alerts.py  anomalies.py  events.py  stats.py  websocket.py
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/src/: main.rs
frontend/src/components/: AlertsTable.tsx  Heatmap.tsx  LiveFeed.tsx  NetworkMap.tsx  SeverityBadge.tsx  StatsCards.tsx  ThreatTimeline.tsx  TopSources.tsx
frontend/src/hooks/: useAPI.ts  useWebSocket.ts
ml/: __init__.py  dns_analysis.py  narrator.py  pipeline.py
ml/models/: __init__.py  dns_classifier.py  login_anomaly.py  network_anomaly.py
ml/rules/: __init__.py  detection.py  engine.py
scripts/: generate_demo_data.py
tests/integration/: test_api.py  test_file_tailer.py
tests/unit/: test_auth_parser.py  test_detection_rules.py  test_dns_analysis.py  test_dns_classifier.py  test_event_bus.py  test_login_anomaly.py  test_narrator.py  test_network_anomaly.py  test_rule_engine.py  test_syslog_parser.py
(+2 files in other folders)
